# CCAR-F-Self-Questioning

./: README.md
Codes/Claude-AI-Engineer-Evaluation-and-Observability/: README.md
Codes/Claude-AI-Engineer-Evaluation-and-Observability/Build a Resilient Mortgage Document Extraction System/01-design-resilient-extraction-schema/starter/: README.md  pyproject.toml
Codes/Claude-AI-Engineer-Evaluation-and-Observability/Build a Resilient Mortgage Document Extraction System/01-design-resilient-extraction-schema/starter/mortgage_extractor/: tools.py
Codes/Claude-AI-Engineer-Evaluation-and-Observability/Project-Evaluation and Observability Project/: perturbation-log.md  reflection-brief.md
Codes/Claude-AI-Engineer-Harness-Engineering/Project-Harness Engineering with Claude and Claude Code /: README.md  reflection-brief-template.md
Codes/Claude-code-classroom/: package-lock.json
Codes/Claude-code-classroom/lesson-01-model-selection/demo/: README.md
Codes/Claude-code-classroom/lesson-02-extended-thinking/demo/: package.json
Codes/Claude-code-classroom/lesson-03-agentic-architecture/demo/: ARCHITECTURE.md
Codes/Claude-code-classroom/lesson-04-claude-code-config/demo/: README.md
Codes/Claude-code-classroom/lesson-06-custom-tools/demo/: README.md
Codes/Claude-code-classroom/lesson-09-mcp-integration/demo/: README.md
Codes/Claude-code-classroom/lesson-11-tdd-with-ai/demo/: README.md
Codes/Claude-code-classroom/lesson-12-evaluating-agents/demo/: README.md  package.json
Codes/Claude-code-classroom/lesson-13-computer-use/demo/: .env.example  README.md  package.json
Docs/: Domain_1_Agentic_Architecture_Orchestration.md  Domain_2_Tool_Design_MCP_Integration.md  Domain_3_Claude_Code_Configuration_Workflows.md  Domain_4_Prompt_Engineering_Structured_Output.md  Domain_5_Context_Management_Reliability.md
Exam Guide/: Domain_1_Self_Questioning_List.md  Domain_2_Self_Questioning_List.md  Domain_3_Self_Questioning_List.md  Domain_4_Self_Questioning_List.md  Domain_5_Self_Questioning_List.md
Practice Exam/: Domain_1_Practice_Self_Questioning.md  Domain_2_Practice_Self_Questioning.md  Domain_3_Practice_Self_Questioning.md  Domain_4_Practice_Self_Questioning.md  Domain_5_Practice_Self_Questioning.md
code/Claude-AI-Engineer-Evaluation-and-Observability/: .gitignore
code/Claude-AI-Engineer-Evaluation-and-Observability/Build a Validated, Routed Insurance Policy Extraction Pipeline/04-hitl-routing/solution/: README.md  pyproject.toml
code/Claude-AI-Engineer-Evaluation-and-Observability/Build a Validated, Routed Insurance Policy Extraction Pipeline/04-hitl-routing/solution/data/policies/: POL-2025-006.txt  POL-2025-008.txt
code/Claude-AI-Engineer-Evaluation-and-Observability/Build a Validated, Routed Insurance Policy Extraction Pipeline/04-hitl-routing/solution/policy_extractor/: retry.py  reviewer.py  routing.py
code/Claude-AI-Engineer-Evaluation-and-Observability/Investigate Supply Chain Risk with Multi-Source Synthesis/: README.md
code/Claude-AI-Engineer-Evaluation-and-Observability/Investigate Supply Chain Risk with Multi-Source Synthesis/01-claim-readers/solution/: pyproject.toml
code/Claude-AI-Engineer-Evaluation-and-Observability/Investigate Supply Chain Risk with Multi-Source Synthesis/01-claim-readers/solution/data/meridian/: audit.json
code/Claude-AI-Engineer-Evaluation-and-Observability/Investigate Supply Chain Risk with Multi-Source Synthesis/01-claim-readers/solution/fixtures/news_extraction/: port_strike.json
code/Claude-AI-Engineer-Evaluation-and-Observability/Investigate Supply Chain Risk with Multi-Source Synthesis/01-claim-readers/solution/supply_chain_risk/: coordinator.py
code/Claude-code-classroom/lesson-13-computer-use/: README.md
(+275 files in other folders)
