[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mortgage-document-extraction-system"
version = "0.2.0"
description = "Resilient mortgage document extraction with tool-based structured output."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "mypy>=1.10",
  "ruff>=0.5",
]

[project.scripts]
mortgage-extract = "mortgage_extractor.__main__:main"

[tool.setuptools.packages.find]
include = ["mortgage_extractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"mortgage_extractor/prompts.py" = ["E501"]
