[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policy-extractor"
version = "0.2.0"
description = "Insurance policy renewal extraction pipeline with retry, batch, independent review, and confidence-based HITL routing."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "ruff>=0.5",
]

[project.scripts]
policy-extractor = "policy_extractor.__main__:main"

[tool.setuptools.packages.find]
include = ["policy_extractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: hits the real Anthropic API; requires ANTHROPIC_API_KEY",
]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["anthropic.*"]
ignore_missing_imports = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
